test/assets/invalid/string-to-num/expect-int-from-char.hs
a :: Int -> String
a = show

b = a '4'